Fixed font size and spacing

--- a/styles/github-markdown.less
+++ b/styles/github-markdown.less
@@ -18,6 +18,8 @@
   font-family: "Sans Forgetica", "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.6;
   word-wrap: break-word;
+  font-size: 16px;
+  letter-spacing: 0.1em;
 }
 
 .mde-preview:before {
@@ -147,6 +149,7 @@
     padding-top: 15px;
     margin-bottom: 15px;
     line-height: 1.1;
+    font-family: "Sans Forgetica", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   }
 
   h1 {
